--- a/css/style.scss
+++ b/css/style.scss
@@ -69,7 +69,7 @@ body {
     flex-direction: column;
     background-color: #ffffff;
     border-radius: 1rem;
-    width: 16rem;
+    width: 100%;
     min-height: 21rem;
     margin: 1rem auto;
     .mentorImage {
