--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
   margin: 3.5rem auto;
 }
 
-.cardWrapper {
+.CardWrapper {
   margin: 0 1rem;
 }
 
@@ -86,7 +86,7 @@ body {
   background-color: #ffffff;
   border-radius: 1rem;
   width: 18rem;
-  min-height: 20rem;
+  min-height: 22rem;
   margin: 1rem auto;
 }
 
@@ -128,7 +128,7 @@ body {
 
 .mentorCard .mentorText {
   position: relative;
-  margin: auto 0;
+  margin: 1rem 0;
 }
 
 .mentorCard .mentorText h1 {
@@ -137,9 +137,274 @@ body {
   color: #000000;
 }
 
-.mentorCard .mentorText h2 {
+.mentorCard .mentorText .skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.mentorCard .mentorText .skills h1 {
   font-size: 1rem;
   font-weight: 400;
+  padding: 0.4rem 0.8rem;
+  border-radius: 0.5rem;
+  text-transform: uppercase;
+}
+
+.mentorCard .mentorText .skills .pink {
+  background-color: #ffd4d4;
+  color: #ec0000;
+}
+
+.mentorCard .mentorText .skills .green {
+  background-color: #bbffb6;
+  color: #00b20c;
+}
+
+.mentorCard .mentorText .skills .yellow {
+  background-color: #ffeda5;
+  color: #eaa500;
+}
+
+.teamCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1rem auto;
+}
+
+.teamCard .teamImage {
+  text-align: center;
+  width: 15rem;
+  height: 12rem;
+  margin: 0 auto;
+}
+
+.teamCard .teamImage img {
+  width: 100%;
+  height: 12rem;
+  margin: 0 auto !important;
+  border-radius: 1.5rem;
+  -webkit-box-shadow: 0 3px 25px 0 rgba(0, 0, 0, 0.16);
+          box-shadow: 0 3px 25px 0 rgba(0, 0, 0, 0.16);
+}
+
+.teamCard .teamText {
   color: #000000;
+  text-align: center;
+  margin: 0.5rem 0;
+}
+
+.teamCard .teamText h1 {
+  font-size: 1.5rem;
+}
+
+.teamCard .teamText h2 {
+  margin: 0 auto;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
+  background-color: #000000;
+  color: #ffffff;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
+.teamCard .teamLinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.teamCard .teamLinks a {
+  text-decoration: none;
+  outline: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.teamCard .teamLinks a .teamLinkedin {
+  margin-right: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 2rem;
+  height: 2rem;
+  background-color: #0077b5;
+  border-radius: 100%;
+}
+
+.teamCard .teamLinks a .teamLinkedin img {
+  width: 60%;
+  -webkit-filter: invert(100%) sepia(6%) saturate(290%) hue-rotate(268deg) brightness(112%) contrast(100%);
+          filter: invert(100%) sepia(6%) saturate(290%) hue-rotate(268deg) brightness(112%) contrast(100%);
+}
+
+.teamCard .teamLinks a .teamGithub {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 2rem;
+  height: 2rem;
+  background-color: #000000;
+  border-radius: 100%;
+}
+
+.teamCard .teamLinks a .teamGithub img {
+  width: 60%;
+  -webkit-filter: invert(100%) sepia(6%) saturate(290%) hue-rotate(268deg) brightness(112%) contrast(100%);
+          filter: invert(100%) sepia(6%) saturate(290%) hue-rotate(268deg) brightness(112%) contrast(100%);
+}
+
+.chennai {
+  text-align: center;
+}
+
+.chennai img {
+  width: 10rem;
+}
+
+.timer {
+  text-align: center;
+}
+
+#clockdiv {
+  font-family: sans-serif;
+  color: #000000;
+  display: inline-block;
+  font-weight: 100;
+  text-align: center;
+}
+
+#clockdiv > div {
+  padding: 10px;
+  border-radius: 3px;
+  display: inline-block;
+}
+
+#clockdiv div > span {
+  font-size: 2rem;
+  color: #000000;
+  font-weight: 600;
+}
+
+.smalltext {
+  padding-top: 5px;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.footer {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 20vh;
+}
+
+.footer .text h1 {
+  font-size: 1rem;
+  color: #ffffff;
+}
+
+.footer .links a {
+  margin: 0 0.5rem;
+  text-decoration: none;
+  outline: none;
+}
+
+.footer .links a #mail {
+  -webkit-filter: invert(69%) sepia(81%) saturate(3714%) hue-rotate(318deg) brightness(97%) contrast(117%);
+          filter: invert(69%) sepia(81%) saturate(3714%) hue-rotate(318deg) brightness(97%) contrast(117%);
+}
+
+.footer .links a #linked {
+  -webkit-filter: invert(44%) sepia(65%) saturate(5025%) hue-rotate(196deg) brightness(103%) contrast(99%);
+          filter: invert(44%) sepia(65%) saturate(5025%) hue-rotate(196deg) brightness(103%) contrast(99%);
+}
+
+.footer .links a #insta {
+  -webkit-filter: invert(23%) sepia(100%) saturate(1902%) hue-rotate(288deg) brightness(113%) contrast(126%);
+          filter: invert(23%) sepia(100%) saturate(1902%) hue-rotate(288deg) brightness(113%) contrast(126%);
+}
+
+.footer .links a #slack {
+  -webkit-filter: invert(49%) sepia(100%) saturate(776%) hue-rotate(85deg) brightness(109%) contrast(115%);
+          filter: invert(49%) sepia(100%) saturate(776%) hue-rotate(85deg) brightness(109%) contrast(115%);
+}
+
+.footer .links a #twitter {
+  -webkit-filter: invert(61%) sepia(94%) saturate(1684%) hue-rotate(135deg) brightness(104%) contrast(100%);
+          filter: invert(61%) sepia(94%) saturate(1684%) hue-rotate(135deg) brightness(104%) contrast(100%);
+}
+
+.footer .links a #git {
+  -webkit-filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
+          filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
+}
+
+@media (max-width: 900px) {
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 800px) {
+  #clockdiv div > span {
+    font-size: 1.5rem;
+  }
+  .smalltext {
+    font-size: 1rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
