--- a/css/style.scss
+++ b/css/style.scss
@@ -60,7 +60,7 @@ body {
     }
 }
 
-.cardWrapper {
+.CardWrapper {
     margin: 0 1rem;
 }
 
@@ -70,7 +70,7 @@ body {
     background-color: #ffffff;
     border-radius: 1rem;
     width: 18rem;
-    min-height: 20rem;
+    min-height: 22rem;
     margin: 1rem auto;
     .mentorImage {
         position: relative;
@@ -99,16 +99,204 @@ body {
     }
     .mentorText {
         position: relative;
-        margin: auto 0;
+        margin: 1rem 0;
         h1 {
             font-size: 1.5rem;
             font-weight: 600;
             color: #000000;
         }
-        h2 {
-            font-size: 1rem;
-            font-weight: 400;
-            color: #000000;
+        .skills {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            h1 {
+                font-size: 1rem;
+                font-weight: 400;
+                padding: 0.4rem 0.8rem;
+                border-radius: 0.5rem;
+                text-transform: uppercase;
+            }
+            .pink {
+                background-color: #ffd4d4;
+                color: #ec0000;
+            }
+            .green {
+                background-color: #bbffb6;
+                color: #00b20c;
+            }
+            .yellow {
+                background-color: #ffeda5;
+                color: #eaa500;
+            }
         }
+    }
+}
+
+.teamCard {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem auto;
+    .teamImage {
+        text-align: center;
+        width: 15rem;
+        height: 12rem;
+        margin: 0 auto;
+        img {
+            width: 100%;
+            height: 12rem;
+            margin: 0 auto !important;
+            border-radius: 1.5rem;
+            box-shadow: 0 3px 25px 0 rgba(0, 0, 0, 0.16);
+        }
+    }
+    .teamText {
+        color: #000000;
+        text-align: center;
+        margin: 0.5rem 0;
+        h1 {
+            font-size: 1.5rem;
+        }
+        h2 {
+            margin: 0 auto;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            font-weight: 300;
+            letter-spacing: 0.2rem;
+            background-color: #000000;
+            color: #ffffff;
+            width: fit-content;
+            padding: 0.5rem 1rem;
+            border-radius: 0.5rem;
+        }
+    }
+    .teamLinks {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        a {
+            text-decoration: none;
+            outline: none;
+            width: fit-content;
+            .teamLinkedin {
+                margin-right: 1rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 2rem;
+                height: 2rem;
+                background-color: #0077b5;
+                border-radius: 100%;
+                img {
+                    width: 60%;
+                    filter: invert(100%) sepia(6%) saturate(290%) hue-rotate(268deg) brightness(112%) contrast(100%);
+                }
+            }
+            .teamGithub {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 2rem;
+                height: 2rem;
+                background-color: #000000;
+                border-radius: 100%;
+                img {
+                    width: 60%;
+                    filter: invert(100%) sepia(6%) saturate(290%) hue-rotate(268deg) brightness(112%) contrast(100%);
+                }
+            }
+        }
+    }
+}
+
+.chennai {
+    text-align: center;
+    img {
+        width: 10rem;
+    }
+}
+
+.timer {
+    text-align: center;
+}
+
+#clockdiv {
+    font-family: sans-serif;
+    color: #000000;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+}
+
+#clockdiv>div {
+    padding: 10px;
+    border-radius: 3px;
+    display: inline-block;
+}
+
+#clockdiv div>span {
+    font-size: 2rem;
+    color: #000000;
+    font-weight: 600;
+}
+
+.smalltext {
+    padding-top: 5px;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 20vh;
+    .text {
+        h1 {
+            font-size: 1rem;
+            color: #ffffff;
+        }
+    }
+    .links {
+        a {
+            margin: 0 0.5rem;
+            text-decoration: none;
+            outline: none;
+            #mail {
+                filter: invert(69%) sepia(81%) saturate(3714%) hue-rotate(318deg) brightness(97%) contrast(117%);
+            }
+            #linked {
+                filter: invert(44%) sepia(65%) saturate(5025%) hue-rotate(196deg) brightness(103%) contrast(99%);
+            }
+            #insta {
+                filter: invert(23%) sepia(100%) saturate(1902%) hue-rotate(288deg) brightness(113%) contrast(126%);
+            }
+            #slack {
+                filter: invert(49%) sepia(100%) saturate(776%) hue-rotate(85deg) brightness(109%) contrast(115%);
+            }
+            #twitter {
+                filter: invert(61%) sepia(94%) saturate(1684%) hue-rotate(135deg) brightness(104%) contrast(100%);
+            }
+            #git {
+                filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
+            }
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .footer {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 800px) {
+    #clockdiv div>span {
+        font-size: 1.5rem;
+    }
+    .smalltext {
+        font-size: 1rem;
     }
 }
