--- a/css/style.scss
+++ b/css/style.scss
@@ -31,10 +31,14 @@ body {
 
 .partner {
     width: 90%;
+    min-height: 15rem;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.16);
     border-radius: 1rem;
     text-align: center;
     margin: 1rem auto;
+    .powered {
+        margin: 3rem 0;
+    }
     h1 {
         background-color: #000000;
         color: #ffffff;
@@ -54,9 +58,107 @@ body {
 .titlePartnerImg {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    div {
+        width: 50%;
+        margin: 2rem 0;
+        img {
+            max-width: 70%;
+        }
+    }
+}
+
+.srmpedia {
+    margin-bottom: 3rem;
     img {
+        width: 60% !important;
+    }
+}
+
+.giftingPartner {
+    display: flex;
+    flex-direction: row;
+    img {
+        max-width: 40% !important;
+        margin: 1.2rem auto;
+    }
+}
+
+.communityPartner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    img {
+        max-width: 80% !important;
+        margin: 3rem auto;
+    }
+}
+
+.goldPartner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    div {
+        margin: 1rem 0;
         width: 30%;
-        margin: 3.5rem auto;
+        img {
+            max-width: 80% !important;
+        }
+    }
+    #xyz {
+        width: 20% !important;
+    }
+}
+
+.silverPartner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    div {
+        margin: 1.5rem 0;
+        width: 30%;
+        img {
+            max-width: 80% !important;
+        }
+    }
+}
+
+.bronzePartner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    div {
+        margin: 1rem 0;
+        width: 30%;
+        img {
+            max-width: 80% !important;
+        }
+    }
+    #bugsee {
+        width: 15%;
+        img {
+            max-width: 60% !important;
+        }
+    }
+}
+
+.mediaPartner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    div {
+        width: 50%;
+        img {
+            max-width: 80%;
+        }
+        #srmpedia {
+            max-width: 55%;
+        }
     }
 }
 
@@ -179,7 +281,6 @@ body {
             outline: none;
             width: fit-content;
             .teamLinkedin {
-                margin-right: 1rem;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -193,6 +294,7 @@ body {
                 }
             }
             .teamGithub {
+                margin-left: 1rem;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -268,16 +370,20 @@ body {
                 filter: invert(69%) sepia(81%) saturate(3714%) hue-rotate(318deg) brightness(97%) contrast(117%);
             }
             #linked {
-                filter: invert(44%) sepia(65%) saturate(5025%) hue-rotate(196deg) brightness(103%) contrast(99%);
+                // filter: invert(44%) sepia(65%) saturate(5025%) hue-rotate(196deg) brightness(103%) contrast(99%);
+                filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
             }
             #insta {
-                filter: invert(23%) sepia(100%) saturate(1902%) hue-rotate(288deg) brightness(113%) contrast(126%);
+                // filter: invert(23%) sepia(100%) saturate(1902%) hue-rotate(288deg) brightness(113%) contrast(126%);
+                filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
             }
-            #slack {
-                filter: invert(49%) sepia(100%) saturate(776%) hue-rotate(85deg) brightness(109%) contrast(115%);
+            #facebook {
+                // filter: invert(35%) sepia(87%) saturate(444%) hue-rotate(182deg) brightness(91%) contrast(87%);
+                filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
             }
             #twitter {
-                filter: invert(61%) sepia(94%) saturate(1684%) hue-rotate(135deg) brightness(104%) contrast(100%);
+                // filter: invert(61%) sepia(94%) saturate(1684%) hue-rotate(135deg) brightness(104%) contrast(100%);
+                filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
             }
             #git {
                 filter: invert(100%) sepia(88%) saturate(0%) hue-rotate(214deg) brightness(105%) contrast(102%);
@@ -289,6 +395,85 @@ body {
 @media (max-width: 900px) {
     .footer {
         flex-direction: column;
+    }
+}
+
+@media (max-width: 990px) {
+    .giftingPartner {
+        flex-direction: column;
+        img {
+            max-width: 60% !important;
+            margin: 0rem auto;
+        }
+    }
+    .communityPartner {
+        img {
+            max-width: 80% !important;
+            margin: 3.5rem auto;
+        }
+    }
+    .goldPartner {
+        flex-direction: column;
+        div {
+            width: 80%;
+            img {
+                max-width: 100%;
+            }
+        }
+        #xyz {
+            width: 60% !important;
+        }
+    }
+    .silverPartner {
+        flex-direction: column;
+        div {
+            width: 80%;
+            margin: auto 0;
+            img {
+                max-width: 100% !important;
+            }
+        }
+    }
+    .bronzePartner {
+        display: flex;
+        flex-direction: column;
+        div {
+            width: 80%;
+        }
+        #bugsee {
+            width: 80%;
+            img {
+                max-width: 100%;
+            }
+        }
+    }
+    .mediaPartner {
+        display: flex;
+        flex-direction: column;
+        div {
+            width: 80%;
+            img {
+                max-width: 100%;
+            }
+        }
+    }
+    .partner {
+        .powered {
+            width: 100%;
+            img {
+                max-width: 80% !important;
+            }
+        }
+    }
+    .titlePartnerImg {
+        flex-direction: column;
+        div {
+            width: 80%;
+            margin: 0.5rem 0;
+            img {
+                max-width: 100%;
+            }
+        }
     }
 }
 
